--- a/data_collectors/requirements.txt
+++ b/data_collectors/requirements.txt
@@ -11,3 +11,5 @@ mypy==0.991
 pyroma==4.0
 types-PyYAML==6.0.12.2
 python-dateutil==2.8.2
+elasticsearch_dsl==7.4.0
+types-python-dateutil==2.8.19.6
